# open-source-attendance-logger

./: README.md  bun.lockb  config.xml  error.txt  package.json
gj7-admin/: README.md  bun.lockb  package.json  postman.txt  vite.config.ts  vite.config.ts.timestamp-1733186895152-1306b8a0ca934.mjs
gj7-admin/src/: App.css  App.tsx  matrix.css  shimmer-card.css
gj7-admin/src-tauri/: Cargo.toml  installer.nsi
gj7-adminf/: bun.lockb
gj7-adminf/public/: splashscreen.html
gj7-adminf/src/: ConfigCheck.tsx  main.tsx
gj7-adminf/src-tauri/: Cargo.toml
gj7-client/: .env  bun.lockb  package.json  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1733186893136-4833bcb11b4a8.mjs
gj7-client/src/: App.css  App.tsx  SplashScreen.tsx  env.ts  main.tsx
gj7-client/src-tauri/: Cargo.toml  tauri.conf.json
src/: App.tsx
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/src/: config.rs  csv_commands.rs  db.rs  first_launch.rs  insertSchoolAccounts.py  lib.rs  network.rs  network_server.rs  notes_commands.rs  school_account_commands.rs  semester_commands.rs  showSchoolAccounts.py  showTable.py  storage.rs  test_account.csv
src-tauri/src/db/: attendance.rs  auth.rs  csv_import.rs  csv_transform.rs  notes.rs  purpose.rs  school_accounts.rs
src-tauri/src/tests/: csv_import_tests.rs  mod.rs  school_accounts_count_test.rs
src/components/: Attendance.tsx  AuthModal.tsx  CsvContentValidationErrors.tsx  CsvHeaderValidationErrors.tsx  CsvImportComponent.tsx  DatabasePaths.tsx  HomePage.tsx  ImportLoadingState.tsx  Navbar.tsx  Notes.tsx  Records.tsx  SchoolAccounts.tsx  SearchBar.tsx  Sidebar.tsx  backup.tsx  icon-selector.tsx  purpose-modal.tsx  search-modal.tsx  (+1 more)
(+162 files in other folders)
