[package]
name = "sample2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "sample2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
uuid = { version = "1.3.3", features = ["v4", "serde"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
directories = "5.0"
quick-xml = { version = "0.31", features = ["serialize"] }
csv = "1.2"
parking_lot = "0.12"